--- a/css/privacy.css
+++ b/css/privacy.css
@@ -82,298 +82,44 @@ textarea {
   font-family: inherit;
 }
 
-.box__middle div:first-child div div:nth-child(3), .box__middle div:first-child div div:nth-child(2), .box__middle div:first-child div div:nth-child(1) {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-header {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
-}
-
-.box__middle div:first-child div div:nth-child(3), .box__middle div:first-child div div:nth-child(2), .box__middle div:first-child div div:nth-child(1) {
-  border: 0.1rem dashed #3E6D44;
-  padding: 3rem;
-  border-radius: 1.5rem;
-}
-
 body {
-  font-family: SF;
-  font-size: 1.6rem;
-  padding: 2rem;
-  background-color: #1A1A1A;
+  background-color: #0D0D0D;
   color: white;
+  font-size: 1.6rem;
+  font-family: "SF", sans-serif;
+}
+
+.container {
+  max-width: 1728px;
+  margin: auto;
+  padding: 0 4rem;
 }
 
 h1 {
-  font-size: 6.8rem;
-  line-height: 90%;
-  margin-left: -0.6rem;
-  margin-bottom: 3rem;
+  font-size: 9.6rem;
 }
 
-h2 {
-  font-size: 2.4rem;
-  font-weight: 700;
+header {
+  width: 100%;
+  position: absolute;
+  z-index: 20;
 }
 
-h3 {
-  font-size: 2.4rem;
-  font-weight: 700;
-}
-
-p {
-  line-height: 120%;
-}
-
-.box {
-  padding: 4rem;
-  background-color: #262626;
-  border-radius: 5rem;
-  overflow: hidden;
-}
-
-.header__box {
+.header__container {
   display: grid;
-  grid-template-rows: max-content 1fr max-content;
-  gap: 5rem;
-}
-
-.box__top {
-  display: grid;
-  grid-template-columns: max-content max-content;
+  grid-template-columns: max-content 1fr max-content;
   justify-content: space-between;
-  gap: 1rem;
-  align-items: center;
+  padding: 2rem clamp(2rem, 2rem + (1vw - 0.32rem) * 2.8409, 6rem);
+}
+
+nav {
+  display: flex;
+  gap: clamp(2rem, 2rem + (1vw - 0.32rem) * 1.4205, 4rem);
+  justify-content: center;
+  margin-top: 1.7rem;
+  font-size: 1.8rem;
 }
 
 .logo {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-  color: white;
-}
-.logo span {
-  padding-top: 0.5rem;
-  font-weight: 300;
-}
-
-.toggle {
-  position: relative;
-  display: inline;
-}
-.toggle label {
-  position: absolute;
-  color: white;
-  font-size: 1.6rem;
-  pointer-events: none;
-  color: #64DA72;
-}
-.toggle .ru {
-  left: 0.7rem;
-  bottom: 0.97rem;
-}
-.toggle .en {
-  right: 0.7rem;
-  bottom: 0.97rem;
-}
-
-input[type=checkbox] {
-  position: relative;
-  width: 6rem;
-  height: 3rem;
-  background-color: #4c4c4c;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  border-radius: 20px;
-  outline: none;
-  cursor: pointer;
-}
-input[type=checkbox]::before {
-  z-index: 2;
-  content: "";
-  position: absolute;
-  width: 3rem;
-  height: 3rem;
-  left: 0;
-  right: 0;
-  background: white;
-  border-radius: 50%;
-  transform: scale(1.1);
-  transition: 0.3s ease-in-out;
-}
-input[type=checkbox]:checked::before {
-  left: 3rem;
-}
-
-.box__middle {
-  display: grid;
-  grid-template-columns: 1.5fr 1fr;
-  gap: 3rem;
-}
-.box__middle div:first-child {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.box__middle div:first-child div {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 1rem;
-}
-.box__middle div:first-child div div:nth-child(1) {
-  grid-column: 1/3;
-  grid-row: 1/3;
-}
-.box__middle div:first-child div div:nth-child(2) {
-  grid-column: 3/5;
-}
-.box__middle div:first-child div div:nth-child(3) {
-  grid-column: 3/5;
-}
-
-h1 span {
-  font-size: 4.2rem;
-  font-weight: 700;
-  margin-left: 0.3rem;
-}
-
-.img-wrap {
-  position: relative;
-}
-.img-wrap:hover img:nth-child(1) {
-  transform: rotate(5deg);
-  z-index: 100;
-}
-.img-wrap:hover img:nth-child(2) {
-  transform: rotate(-10deg);
-}
-
-.img-wrap img:nth-child(1) {
-  max-width: 25rem;
-  position: absolute;
-  top: 0;
-  right: 0;
-  transition: transform 0.5s ease;
-}
-
-.img-wrap img:nth-child(2) {
-  max-width: 25rem;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  transition: transform 0.5s ease;
-}
-
-.box__bottom {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.box__bottom span {
-  font-size: 4.8rem;
-  font-weight: 700;
-}
-
-.boxes {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 2rem;
-}
-
-.box--small {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  transition: background-color ease-in-out 300ms;
-}
-.box--small div {
-  display: flex;
-  justify-content: space-between;
-  gap: 4rem;
-}
-.box--small .box-items {
-  display: flex;
-  justify-content: space-between;
-}
-.box--small .box-items .item {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: center;
-}
-.box--small .box-items .item .avatar {
-  border: 0.1rem dashed #3E6D44;
-  border-radius: 10rem;
-  padding: 0.6rem;
-}
-.box--small span {
-  color: #BEBEBE;
-}
-.box--small:hover {
-  background-color: #2f2f2f;
-}
-
-.img-1 {
-  position: absolute;
-  width: 15rem;
-  left: 10%;
-  bottom: -13rem;
-  transition: 0.5s ease;
-}
-
-.img-2 {
-  position: absolute;
-  width: 15rem;
-  left: 30%;
-  bottom: -18rem;
-  transition: 0.5s ease;
-}
-
-.img-3 {
-  position: absolute;
-  width: 15rem;
-  right: 10%;
-  bottom: -23rem;
-  transition: 0.5s ease;
-}
-
-.box--hover:hover .img-1 {
-  bottom: -12rem;
-}
-.box--hover:hover .img-2 {
-  bottom: -11rem;
-}
-.box--hover:hover .img-3 {
-  bottom: -10rem;
-}
-
-.contact-box span {
-  color: white;
-}
-
-.contact-box img {
-  position: absolute;
-  width: 15rem;
-  right: 10%;
-  bottom: -15rem;
-  transition: 0.5s ease;
-}
-
-.phone {
-  font-size: 3.2rem;
-  line-height: 140%;
-}
-.phone span {
-  color: #64DA72;
-}
-
-.box-animation:hover .contact-img {
-  transform: scale(1.1);
+  width: 10rem;
 }/*# sourceMappingURL=privacy.css.map */
