--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,274 +1,24 @@
 header {
-	@extend %grid-2box;
+	width: 100%;
+	position: absolute;
+	z-index: 20;
 }
 
-.header__box {
+.header__container {
 	display: grid;
-	grid-template-rows: max-content 1fr max-content;
-	gap: 5rem;
-}
-
-.box__top {
-	display: grid;
-	grid-template-columns: max-content max-content;
+	grid-template-columns: max-content 1fr max-content;
 	justify-content: space-between;
-	gap: 1rem;
-	align-items: center;
+	padding: 2rem clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 2.8409)), 6rem);
+}
+
+nav {
+	display: flex;
+	gap: clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 1.4205)), 4rem);
+	justify-content: center;
+	margin-top: 1.7rem;
+	font-size: 1.8rem;
 }
 
 .logo {
-	display: flex;
-	gap: 1rem;
-	align-items: center;
-	color: $clr-light;
-
-	span {
-		padding-top: .5rem;
-		font-weight: 300;
-	}
-}
-
-.toggle {
-  position: relative;
-  display: inline;
-  
-  label {
-    position: absolute;
-    color: $clr-light;
-    font-size: $fontSize-XXS;
-    pointer-events: none;
-    color: $clr-primary;
-  }
-  
-  .ru {
-    left: .7rem;
-    bottom: .97rem;
-  }
-  
-   .en {
-    right: .7rem;
-    bottom: .97rem;
-  }
-}
-
-input[type="checkbox"] {
-  position: relative;
-  width: 6rem;
-  height: 3rem; 
-  background-color: $clr-toggle;
-  appearance: none;
-  border-radius: 20px;
-  outline: none;
-  cursor: pointer;
-  
-  &::before {
-    z-index: 2;
-    content: "";
-    position: absolute;
-    width: 3rem;
-    height: 3rem;
-    left: 0;
-    right: 0;
-    background: white;
-    border-radius: 50%;
-    transform: scale(1.1);
-    transition: .3s ease-in-out;
-  }
-  
-  &:checked::before{
-    left: 3rem;
-  }
-}
-
-.box__middle {
-	display: grid;
-	grid-template-columns: 1.5fr 1fr;
-	gap: 3rem;
-
-	div:first-child {
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-
-		div {
-			display: grid;
-			grid-template-columns: 1fr 1fr 1fr 1fr;
-			gap: 1rem;
-
-			div:nth-child(1) {
-				grid-column: 1 / 3;
-				grid-row: 1 / 3;
-				@extend %border-dashed;
-			}
-
-			div:nth-child(2) {
-				grid-column: 3 / 5;
-				@extend %border-dashed;
-			}
-
-			div:nth-child(3) {
-				grid-column: 3 / 5;
-				@extend %border-dashed;
-			}
-		}
-	}
-}
-
-h1 span {
-	font-size: $fontSize-XXXL;
-	font-weight: 700;
-	margin-left: .3rem;
-}
-
-.img-wrap {
-	position: relative;
-
-	&:hover img:nth-child(1) {
-		transform: rotate(5deg);
-		z-index: 100;
-	}
-
-	&:hover img:nth-child(2) {
-		transform: rotate(-10deg);
-	}
-}
-
-.img-wrap img:nth-child(1) {
-	max-width: 25rem;
-	position: absolute;
-	top: 0;
-	right: 0;
-	transition: transform .5s ease;
-}
-
-.img-wrap img:nth-child(2) {
-	max-width: 25rem;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	transition: transform .5s ease;
-}
-
-.box__bottom {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-
-	span {
-		font-size: 4.8rem;
-		font-weight: 700;
-	}
-}
-
-.boxes {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 2rem;
-}
-
-.box--small {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	transition: background-color ease-in-out 300ms;
-
-	div {
-		display: flex;
-		justify-content: space-between;
-		gap: 4rem;
-	}
-
-	.box-items {
-		display: flex;
-		justify-content: space-between;
-
-		.item {
-			display: flex;
-			flex-direction: column;
-			gap: 1rem;
-			align-items: center;
-
-			.avatar {
-				border: .1rem dashed $clr-dashed;
-				border-radius: 10rem;
-				padding: .6rem;
-			}
-		}
-	}
-
-	span {
-		color: $clr-baseLight;
-	}
-
-	&:hover {
-		background-color: $clr-boxHover;
-	}
-}
-
-.img-1 {
-	position: absolute;
-	width: 15rem;
-	left: 10%;
-	bottom: -13rem;
-	transition: .5s ease;
-}
-
-.img-2 {
-	position: absolute;
-	width: 15rem;
-	left: 30%;
-	bottom: -18rem;
-	transition: .5s ease;
-}
-
-.img-3 {
-	position: absolute;
-	width: 15rem;
-	right: 10%;
-	bottom: -23rem;
-	transition: .5s ease;
-}
-
-.box--hover {
-	&:hover .img-1 {
-		bottom: -12rem;
-	}
-
-	&:hover .img-2 {
-		bottom: -11rem;
-	}
-
-	&:hover .img-3 {
-		bottom: -10rem;
-	}
-}
-
-.contact-box {
-	span {
-		color: $clr-light;
-	}
-}
-
-.contact-box img {
-	position: absolute;
-	width: 15rem;
-	right: 10%;
-	bottom: -15rem;
-	transition: .5s ease;
-}
-
-.phone {
-	font-size: $fontSize-XL;
-	line-height: 140%;
-
-	span {
-		color: $clr-primary;
-	}
-}
-
-.box-animation {
-	&:hover .contact-img {
-		transform: scale(1.1);
-	}
+	width: 10rem;
 }
