--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -1,92 +1,30 @@
-.benefits-wrap {
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	gap: 2rem;
-	padding-top: 2rem;
-}
-
-.benefits__item {
+.hero {
+	height: 100vh;
+	min-height: 60rem;
 	position: relative;
-	display: flex;
-	flex-direction: column;
-	gap: 2rem;
-
-	&:nth-child(3) {
-		grid-column: 3 / 5;
-		grid-row: 1 / 3;
-	}
-
-	&:nth-child(7) {
-		grid-column: 2 / 5;
-		background-image: url(/assets/img/hosting-banner.jpg);
-		background-size: cover;
-		background-position: center;
-		background-repeat: no-repeat;
-		display: flex;
-		flex-direction: column;
-		gap: 1rem;
-		align-items: center;
-		justify-content: center;
-
-		h3 {
-			font-size: $fontSize-titleBanner;
-			font-weight: 700;
-		}
-
-		p {
-			font-size: $fontSize-XL;
-		}
-
-		.hosting-price {
-			font-size: $fontSize-XXXL;
-			font-weight: 700;
-			color: $clr-primary;
-		}
-
-		.hosting-info {
-			position: absolute;
-			left: 4rem;
-			bottom: 4rem;
-			font-size: $fontSize-XXXS;
-			font-weight: 300;
-
-			span {
-				display: inline;
-				color: $clr-primary;
-			}
-		}
-	}
 }
 
-.benefits__item__top {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-
-	span:nth-child(1) {
-		color: $clr-primary;
-	}
-
-	span:nth-child(2) {
-		color: $clr-baseDark;
-		font-size: $fontSize-XXXL;
-		font-weight: 700;
-		line-height: 80%;
-	}
+.hero__content {
+	z-index: 20;
+	position: absolute;
+	width: 100%;
+	top: 50%;
+	left: 50%;
 }
 
-.benefits__item__bottom {
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-
-	p {
-		font-size: 1.8rem;
-		color: $clr-baseNormal;
-		line-height: 140%;
-	}
+video {
+	object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
-.highlight {
-	color: $clr-primary;
+.hero:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0,0,0,.3);
+  z-index: 10;
 }
