--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,13 @@ textarea {
   font-family: inherit;
 }
 
+.hero__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 body {
   background-color: #0D0D0D;
   color: white;
@@ -117,12 +124,13 @@ h1 {
 
 .btn--secondary {
   background-color: #6015FF;
+  font-size: 2.4rem;
 }
 
 header {
   width: 100%;
   position: absolute;
-  z-index: 20;
+  z-index: 30;
 }
 
 .header__container {
@@ -150,15 +158,6 @@ nav {
   position: relative;
 }
 
-.hero__content {
-  z-index: 20;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 50%;
-  left: 50%;
-}
-
 video {
   -o-object-fit: cover;
      object-fit: cover;
@@ -166,13 +165,17 @@ video {
   height: 100%;
 }
 
-.hero:after {
-  content: "";
+.hero__content {
+  z-index: 20;
   position: absolute;
+  height: 100%;
+  width: 100%;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
   background: rgba(0, 0, 0, 0.3);
-  z-index: 10;
+  gap: 2rem;
+}
+.hero__content p {
+  font-size: 3.2rem;
+  margin-bottom: 3rem;
 }/*# sourceMappingURL=main.css.map */
