--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -4,28 +4,25 @@
 	position: relative;
 }
 
-.hero__content {
-	z-index: 20;
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	top: 50%;
-	left: 50%;
-}
-
 video {
 	object-fit: cover;
   width: 100%;
   height: 100%;
 }
 
-.hero:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0,0,0,.3);
-  z-index: 10;
+.hero__content {
+	@extend %flex-center;
+	z-index: 20;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0,0,0,.3);
+	gap: 2rem;
+
+	p {
+		font-size: 3.2rem;
+		margin-bottom: 3rem;
+	}
 }
