--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -17,11 +17,11 @@ $fontSize-XXXS: 1.4rem;
 $fontSize-Tiny: 1.2rem;
 
 // Colors ***
+$clr-primary: #6015FF;
 $clr-background: #0D0D0D;
 $clr-dark: black;
 $clr-light: white;
 
-$clr-primary: #64DA72;
 $clr-secondary: #E4E195;
 $clr-box: #262626;
 $clr-boxHover: #2f2f2f;
