--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -6,7 +6,7 @@ header {
 
 .header__container {
 	display: grid;
-	grid-template-columns: max-content 1fr max-content;
+	grid-template-columns: 1fr 2fr 1fr;
 	justify-content: space-between;
 	padding: 2rem clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 2.8409)), 6rem);
 }
@@ -15,10 +15,19 @@ nav {
 	display: flex;
 	gap: clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 1.4205)), 4rem);
 	justify-content: center;
-	margin-top: 1.7rem;
+	margin-top: 1.3rem;
 	font-size: 1.8rem;
 }
 
 .logo {
 	width: 10rem;
+}
+
+.navlink {
+	height: fit-content;
+	transition: color 300ms ease-in-out;
+
+	&:hover {
+		color: $clr-primary;
+	}
 }
