--- a/css/main.css
+++ b/css/main.css
@@ -115,12 +115,17 @@ h1 {
   border-radius: 10rem;
   font-size: 1.8rem;
   font-weight: 400;
+  transition: background-color ease-in-out 300ms;
 }
 
 .btn--primary {
   border: solid 0.2rem white;
   padding: 0.8rem 1.3rem 0.9rem;
   margin-left: auto;
+}
+.btn--primary:hover {
+  background-color: #6015FF;
+  border-color: #6015FF;
 }
 
 .btn--secondary {
@@ -129,7 +134,7 @@ h1 {
   font-size: 2.4rem;
 }
 .btn--secondary:hover {
-  background-color: #6e32f2;
+  background-color: #7542e4;
 }
 
 header {
@@ -192,4 +197,8 @@ video {
 .hero__content p {
   font-size: 3.2rem;
   margin-bottom: 3rem;
+}
+.hero__content img {
+  position: absolute;
+  bottom: 6rem;
 }/*# sourceMappingURL=main.css.map */
