--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -5,12 +5,18 @@
 	border-radius: 10rem;
 	font-size: $fontSize-button;
 	font-weight: 400;
+	transition: background-color ease-in-out 300ms;
 }
 
 .btn--primary {
 	border: solid .2rem white;
 	padding: .8rem 1.3rem .9rem;
 	margin-left: auto;
+
+	&:hover {
+		background-color: $clr-primary;
+		border-color: $clr-primary;
+	}
 }
 
 .btn--secondary {
@@ -19,6 +25,6 @@
 	font-size: 2.4rem;
 
 	&:hover {
-		background-color: #6e32f2;
+		background-color: #7542e4;
 	}
 }
