--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -18,18 +18,10 @@ $fontSize-Tiny: 1.2rem;
 
 // Colors ***
 $clr-primary: #6015FF;
+$clr-secondary: #7542e4;
 $clr-background: #0D0D0D;
 $clr-dark: black;
 $clr-light: white;
-
-$clr-secondary: #E4E195;
-$clr-box: #262626;
-$clr-boxHover: #2f2f2f;
-$clr-toggle: #4c4c4c;
-$clr-dashed: #3E6D44;
-$clr-baseDark: #3B3B3B;
-$clr-baseNormal: #A8A8A8;
-$clr-baseLight: #BEBEBE;
 
 // Breakpoints ***
 $breakpoint-xxl: 1440px;
