--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,7 +2,7 @@ body {
 	background-color: $clr-background;
 	color: $clr-light;
 	font-size: $fontSize-default;
-	font-family: "SF", sans-serif;
+	font-family: $font-default;
 }
 
 .container {
@@ -12,5 +12,5 @@ body {
 }
 
 h1 {
-	font-size: 9.6rem;
+	font-size: 2rem;
 }
