--- a/css/main.css
+++ b/css/main.css
@@ -99,11 +99,12 @@ body {
 .container {
   max-width: 1728px;
   margin: auto;
-  padding: 0 4rem;
+  padding: 0 clamp(2rem, 2rem + (1vw - 0.32rem) * 2.8409, 6rem);
 }
 
 h1 {
-  font-size: 9.6rem;
+  font-size: clamp(4.8rem, 4.8rem + (1vw - 0.32rem) * 3.4091, 9.6rem);
+  text-align: center;
 }
 
 .btn {
@@ -143,7 +144,7 @@ header {
 
 .header__container {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 1fr max-content 1fr;
   justify-content: space-between;
   padding: 2rem clamp(2rem, 2rem + (1vw - 0.32rem) * 2.8409, 6rem);
 }
@@ -168,6 +169,14 @@ nav {
   color: #6015FF;
 }
 
+@media (max-width: 1150px) {
+  nav {
+    display: none;
+  }
+  .header__container {
+    grid-template-columns: max-content max-content;
+  }
+}
 .hero {
   height: 100vh;
   min-height: 60rem;
@@ -191,7 +200,7 @@ video {
   gap: 2rem;
 }
 .hero__content p {
-  font-size: 3.2rem;
+  font-size: clamp(1.8rem, 1.8rem + (1vw - 0.32rem) * 0.9943, 3.2rem);
   margin-bottom: 3rem;
 }
 .hero__content img {
