--- a/css/main.css
+++ b/css/main.css
@@ -97,14 +97,24 @@ body {
 }
 
 .container {
-  max-width: 1728px;
+  max-width: 1440px;
   margin: auto;
-  padding: 0 clamp(2rem, 2rem + (1vw - 0.32rem) * 2.8409, 6rem);
+  padding: 8rem clamp(2rem, 2rem + (1vw - 0.32rem) * 1.4205, 4rem) 12rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
   font-size: clamp(4.8rem, 4.8rem + (1vw - 0.32rem) * 3.4091, 9.6rem);
   text-align: center;
+}
+
+h2 {
+  text-align: center;
+  font-size: clamp(2.4rem, 2.4rem + (1vw - 0.32rem) * 1.7045, 4.8rem);
+  font-weight: 700;
+  margin-bottom: 5rem;
 }
 
 .btn {
@@ -206,4 +216,65 @@ video {
 .hero__content img {
   position: absolute;
   bottom: 6rem;
+}
+
+.progress__grid {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr max-content 1fr;
+  gap: 8rem;
+}
+.progress__grid div:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  gap: 1.5rem;
+}
+.progress__grid .year {
+  font-size: 4.8rem;
+  font-weight: 600;
+  line-height: 100%;
+  background: linear-gradient(90deg, #E4F0FF 0%, #E2EEFC 35%, #DBE7F5 50%, #D1DBE9 61%, #C1CBD7 70%, #ADB5C0 78%, #949AA4 85%, #767A82 92%, #55575C 98%, #48494D 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+  margin-top: -0.7rem;
+}
+.progress__grid .desc {
+  color: #8A8A8A;
+  font-size: 1.8rem;
+}
+.progress__grid .progress__images {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+}
+.progress__grid .progress__images .progress__images__inner {
+  max-height: 22rem;
+}
+.progress__grid .progress__images .progress__images__inner img {
+  border-radius: 2rem;
+  object-fit: cover;
+  object-position: center;
+  height: 100%;
+}
+.progress__grid div:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.progress__grid .timeline {
+  background-color: #171717;
+  width: 0.2rem;
+  height: 100%;
+}
+.progress__grid .large-img {
+  border-radius: 2rem;
+  width: 100%;
+  height: 35rem;
+  object-fit: cover;
+  object-position: center;
 }/*# sourceMappingURL=main.css.map */
