--- a/css/privacy.css
+++ b/css/privacy.css
@@ -90,14 +90,24 @@ body {
 }
 
 .container {
-  max-width: 1728px;
+  max-width: 1440px;
   margin: auto;
-  padding: 0 clamp(2rem, 2rem + (1vw - 0.32rem) * 2.8409, 6rem);
+  padding: 8rem clamp(2rem, 2rem + (1vw - 0.32rem) * 1.4205, 4rem) 12rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
   font-size: clamp(4.8rem, 4.8rem + (1vw - 0.32rem) * 3.4091, 9.6rem);
   text-align: center;
+}
+
+h2 {
+  text-align: center;
+  font-size: clamp(2.4rem, 2.4rem + (1vw - 0.32rem) * 1.7045, 4.8rem);
+  font-weight: 700;
+  margin-bottom: 5rem;
 }
 
 header {
