--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -6,12 +6,22 @@ body {
 }
 
 .container {
-	max-width: 1728px;
+	max-width: 1440px;
 	margin: auto;
-	padding: 0 clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 2.8409)), 6rem);
+	padding: 8rem clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 1.4205)), 4rem) 12rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 h1 {
 	font-size: $fontSize-Huge;
 	text-align: center;
+}
+
+h2 {
+	text-align: center;
+	font-size: $fontSize-XXXL;
+	font-weight: 700;
+	margin-bottom: 5rem;
 }
