--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,4 +2,5 @@
 @import './components/buttons';
 @import './blocks/header';
 @import './blocks/hero';
+@import './blocks/progress';
 @import './blocks/footer';
