--- a/css/main.css
+++ b/css/main.css
@@ -224,11 +224,16 @@ video {
   grid-template-columns: 1fr max-content 1fr;
   gap: 8rem;
 }
-.progress__grid div:nth-child(1) {
+.progress__grid .progress__col {
   display: flex;
   flex-direction: column;
-  align-items: end;
   gap: 1.5rem;
+}
+.progress__grid .progress__col--first {
+  align-items: end;
+}
+.progress__grid .progress__col--second {
+  align-items: start;
 }
 .progress__grid .year {
   font-size: 4.8rem;
@@ -240,10 +245,12 @@ video {
   background-clip: text;
   text-fill-color: transparent;
   margin-top: -0.7rem;
+  width: fit-content;
 }
 .progress__grid .desc {
-  color: #8A8A8A;
+  color: #a2a1a1;
   font-size: 1.8rem;
+  font-weight: 400;
 }
 .progress__grid .progress__images {
   width: 100%;
@@ -261,7 +268,7 @@ video {
   object-position: center;
   height: 100%;
 }
-.progress__grid div:nth-child(2) {
+.progress__grid .timeline__wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -269,7 +276,9 @@ video {
 .progress__grid .timeline {
   background-color: #171717;
   width: 0.2rem;
-  height: 100%;
+  height: 85%;
+  position: absolute;
+  z-index: -1;
 }
 .progress__grid .large-img {
   border-radius: 2rem;
