--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -27,7 +27,7 @@ $clr-background: #0D0D0D;
 $clr-dark: black;
 $clr-light: white;
 $clr-baseDark: #171717;
-$clr-baseNormal: #8A8A8A;
+$clr-baseNormal: #a2a1a1;
 
 // Breakpoints ***
 $breakpoint-huge: 1440px;
