--- a/scss/blocks/_progress.scss
+++ b/scss/blocks/_progress.scss
@@ -65,7 +65,7 @@
 	.timeline {
 		background-color: $clr-baseDark;
 		width: .2rem;
-		height: 85%;
+		height: 87rem;
 		position: absolute;
 		z-index: -1;
 	}
