--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -26,7 +26,8 @@ $clr-secondary: #7542e4;
 $clr-background: #0D0D0D;
 $clr-dark: black;
 $clr-light: white;
-$clr-baseDark: #171717;
+$clr-baseUltraDark: #171717;
+$clr-BaseDark: #252525;
 $clr-baseNormal: #a2a1a1;
 
 // Breakpoints ***
