--- a/scss/blocks/_progress.scss
+++ b/scss/blocks/_progress.scss
@@ -63,7 +63,7 @@
 	}
 
 	.timeline {
-		background-color: $clr-baseDark;
+		background-color: $clr-baseUltraDark;
 		width: .2rem;
 		height: 87rem;
 		position: absolute;
