--- a/scss/base/_extends.scss
+++ b/scss/base/_extends.scss
@@ -1,3 +1,8 @@
+%flex-standart {
+	display: flex;
+	flex-direction: column;
+}
+
 %flex-center {
 	display: flex;
 	flex-direction: column;
@@ -9,4 +14,8 @@
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	gap: 2rem;
+}
+
+%section-line {
+	border-top: .2rem solid $clr-BaseDark;
 }
