--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,4 +3,5 @@
 @import './blocks/header';
 @import './blocks/hero';
 @import './blocks/progress';
+@import './blocks/about';
 @import './blocks/footer';
