Add Mission Section

--- a/css/main.css
+++ b/css/main.css
@@ -94,8 +94,22 @@ textarea {
   justify-content: center;
 }
 
-.about {
+.mission, .about {
   border-top: 0.2rem solid #252525;
+}
+
+.progress__grid .year {
+  background: linear-gradient(90deg, #E4F0FF 0%, #E2EEFC 35%, #DBE7F5 50%, #D1DBE9 61%, #C1CBD7 70%, #ADB5C0 78%, #949AA4 85%, #767A82 92%, #55575C 98%, #48494D 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.mission p {
+  background: linear-gradient(180deg, #E4F0FF 0%, #E2EEFC 35%, #DBE7F5 50%, #D1DBE9 61%, #C1CBD7 70%, #ADB5C0 78%, #949AA4 85%, #767A82 92%, #55575C 98%, #48494D 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
 
 body {
@@ -123,7 +137,7 @@ h2 {
   text-align: center;
   font-size: clamp(2.4rem, 2.4rem + (1vw - 0.32rem) * 1.7045, 4.8rem);
   font-weight: 700;
-  margin-bottom: 5rem;
+  margin-bottom: 4rem;
 }
 
 .btn {
@@ -266,11 +280,6 @@ video {
   font-size: 4.8rem;
   font-weight: 600;
   line-height: 100%;
-  background: linear-gradient(90deg, #E4F0FF 0%, #E2EEFC 35%, #DBE7F5 50%, #D1DBE9 61%, #C1CBD7 70%, #ADB5C0 78%, #949AA4 85%, #767A82 92%, #55575C 98%, #48494D 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  text-fill-color: transparent;
   margin-top: -0.7rem;
   width: fit-content;
 }
@@ -338,5 +347,18 @@ video {
 .about__text__item p {
   color: #a2a1a1;
   line-height: 140%;
+  font-weight: 300;
+}
+
+.mission b {
+  font-size: 2.8rem;
+  margin-bottom: 3rem;
+}
+.mission p {
+  text-align: center;
+  white-space: 50px;
+  font-size: 2.4rem;
+  width: 65ch;
+  line-height: 130%;
   font-weight: 300;
 }/*# sourceMappingURL=main.css.map */
