--- a/scss/blocks/_progress.scss
+++ b/scss/blocks/_progress.scss
@@ -22,11 +22,7 @@
 		font-size: 4.8rem;
 		font-weight: 600;
 		line-height: 100%;
-		background: linear-gradient(90deg, #E4F0FF 0%, #E2EEFC 35%, #DBE7F5 50%, #D1DBE9 61%, #C1CBD7 70%, #ADB5C0 78%, #949AA4 85%, #767A82 92%, #55575C 98%, #48494D 100%);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-clip: text;
-		text-fill-color: transparent;
+		@extend %text-gradientHorizont;
 		margin-top: -.7rem;
 		width: fit-content;
 	}
