--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,4 +4,5 @@
 @import './blocks/hero';
 @import './blocks/progress';
 @import './blocks/about';
+@import './blocks/mission';
 @import './blocks/footer';
