--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,4 +5,5 @@
 @import './blocks/progress';
 @import './blocks/about';
 @import './blocks/mission';
+@import './blocks/specialization';
 @import './blocks/footer';
