--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,4 +6,5 @@
 @import './blocks/about';
 @import './blocks/mission';
 @import './blocks/specialization';
+@import './blocks/style';
 @import './blocks/footer';
