Add Vision Section

--- a/css/main.css
+++ b/css/main.css
@@ -94,11 +94,11 @@ textarea {
   justify-content: center;
 }
 
-.style, .specialization, .mission, .about {
+.vision, .style, .specialization, .mission, .about {
   border-top: 0.2rem solid #252525;
 }
 
-.style__col:last-of-type ul li span, .style__col:last-of-type b, .specialization__col:last-of-type b, .progress__grid .year {
+.vision__quote, .style__col:last-of-type ul li span, .style__col:last-of-type b, .specialization__col:last-of-type b, .progress__grid .year {
   background: linear-gradient(90deg, #E4F0FF 0%, #E2EEFC 35%, #DBE7F5 50%, #D1DBE9 61%, #C1CBD7 70%, #ADB5C0 78%, #949AA4 85%, #767A82 92%, #55575C 98%, #48494D 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -461,4 +461,57 @@ video {
 .style__col:last-of-type ul li span {
   font-size: 2.4rem;
   font-weight: 900;
+}
+
+.vision__quote {
+  font-size: 3.2rem;
+  font-weight: 800;
+}
+
+.vision__grid {
+  margin-top: 4rem;
+  display: grid;
+  width: 100%;
+  grid-template-columns: 1.5fr 1fr;
+  gap: 5rem;
+  height: 50rem;
+}
+
+.vision__col:first-of-type {
+  width: 100%;
+  overflow: auto;
+  padding-right: 2rem;
+}
+.vision__col:first-of-type p {
+  font-size: 2rem;
+  font-weight: 300;
+  color: #a2a1a1;
+  line-height: 150%;
+}
+.vision__col:first-of-type::-webkit-scrollbar {
+  background-color: #171717;
+  width: 0.6rem;
+  border-radius: 10rem;
+}
+.vision__col:first-of-type::-webkit-scrollbar-thumb {
+  background-color: #a2a1a1;
+  border-radius: 10rem;
+}
+
+.vision__col:last-of-type {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+.vision__col:last-of-type img {
+  border-radius: 2rem;
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+}
+.vision__col:last-of-type img:last-of-type {
+  grid-column: 1/3;
+  max-height: 30rem;
+  width: 100%;
+  object-position: top;
 }/*# sourceMappingURL=main.css.map */
