--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,4 +7,5 @@
 @import './blocks/mission';
 @import './blocks/specialization';
 @import './blocks/style';
+@import './blocks/vision';
 @import './blocks/footer';
