Add Plus Section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,4 +8,5 @@
 @import './blocks/specialization';
 @import './blocks/style';
 @import './blocks/vision';
+@import './blocks/plus';
 @import './blocks/footer';
