--- a/css/main.css
+++ b/css/main.css
@@ -94,11 +94,11 @@ textarea {
   justify-content: center;
 }
 
-.vision, .style, .specialization, .mission, .about {
+.plus, .vision, .style, .specialization, .mission, .about {
   border-top: 0.2rem solid #252525;
 }
 
-.vision__quote, .style__col:last-of-type ul li span, .style__col:last-of-type b, .specialization__col:last-of-type b, .progress__grid .year {
+.plus__card span, .vision__quote, .style__col:last-of-type ul li span, .style__col:last-of-type b, .specialization__col:last-of-type b, .progress__grid .year {
   background: linear-gradient(90deg, #E4F0FF 0%, #E2EEFC 35%, #DBE7F5 50%, #D1DBE9 61%, #C1CBD7 70%, #ADB5C0 78%, #949AA4 85%, #767A82 92%, #55575C 98%, #48494D 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -138,6 +138,11 @@ h2 {
   font-size: clamp(2.4rem, 2.4rem + (1vw - 0.32rem) * 1.7045, 4.8rem);
   font-weight: 700;
   margin-bottom: 4rem;
+}
+
+h3 {
+  font-size: 1.8rem;
+  font-weight: 400;
 }
 
 .btn {
@@ -514,4 +519,35 @@ video {
   max-height: 30rem;
   width: 100%;
   object-position: top;
+}
+
+.plus__grid {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 1fr;
+  gap: 1rem;
+}
+.plus__card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #171717;
+  border-radius: 2rem;
+  padding: 2rem;
+}
+.plus__card span {
+  font-size: 1.8rem;
+  font-weight: 800;
+  width: fit-content;
+  padding: 0.8rem;
+  border: solid 0.2rem grey;
+  border-radius: 10rem;
+}
+.plus__card div {
+  margin-top: 4rem;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr max-content;
+  align-items: end;
 }/*# sourceMappingURL=main.css.map */
