--- a/css/privacy.css
+++ b/css/privacy.css
@@ -110,6 +110,11 @@ h2 {
   margin-bottom: 4rem;
 }
 
+h3 {
+  font-size: 1.8rem;
+  font-weight: 400;
+}
+
 header {
   width: 100%;
   position: absolute;
