--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,4 +9,5 @@
 @import './blocks/style';
 @import './blocks/vision';
 @import './blocks/plus';
+@import './blocks/transformation';
 @import './blocks/footer';
