--- a/css/privacy.css
+++ b/css/privacy.css
@@ -82,6 +82,10 @@ textarea {
   font-family: inherit;
 }
 
+footer {
+  border-top: 0.2rem solid #252525;
+}
+
 body {
   background-color: #0D0D0D;
   color: white;
@@ -155,4 +159,39 @@ nav {
   .header__container {
     grid-template-columns: max-content max-content;
   }
+}
+.container__footer {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  width: 100%;
+}
+
+.copyright {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+}
+.copyright a {
+  width: 8rem;
+}
+.copyright span {
+  font-size: 1.8rem;
+}
+
+.politics {
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+  color: #7542e4;
+  font-size: 1.8rem;
+}
+
+.networks {
+  display: flex;
+  gap: 1rem;
+  justify-self: end;
+  align-items: center;
+}
+.networks a:last-of-type {
+  margin-left: 4rem;
+  font-size: 1.8rem;
 }/*# sourceMappingURL=privacy.css.map */
