--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,4 +10,5 @@
 @import './blocks/vision';
 @import './blocks/plus';
 @import './blocks/transformation';
+@import './blocks/contacts';
 @import './blocks/footer';
