--- a/css/privacy.css
+++ b/css/privacy.css
@@ -82,10 +82,9 @@ textarea {
   font-family: inherit;
 }
 
-footer {
+footer, section {
   border-top: 0.2rem solid #252525;
 }
-
 body {
   background-color: #0D0D0D;
   color: white;
