--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,5 +10,6 @@
 @import './blocks/vision';
 @import './blocks/plus';
 @import './blocks/transformation';
+@import './blocks/price';
 @import './blocks/contacts';
 @import './blocks/footer';
