--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,13 @@ textarea {
   justify-content: center;
 }
 
+.price__grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  width: 100%;
+}
+
 footer, .contacts, section {
   border-top: 0.2rem solid #252525;
 }
@@ -101,7 +108,7 @@ footer, .contacts, section {
   border-top: none;
 }
 
-.plus__card span, .vision__quote, .style__col:last-of-type ul li span, .style__col:last-of-type b, .specialization__col:last-of-type b, .progress__grid .year {
+.price__item:first-of-type div:first-of-type span, .plus__card span, .vision__quote, .style__col:last-of-type ul li span, .style__col:last-of-type b, .specialization__col:last-of-type b, .progress__grid .year {
   background: linear-gradient(90deg, #E4F0FF 0%, #E2EEFC 35%, #DBE7F5 50%, #D1DBE9 61%, #C1CBD7 70%, #ADB5C0 78%, #949AA4 85%, #767A82 92%, #55575C 98%, #48494D 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -562,6 +569,30 @@ video {
 }
 .transformation__grid img {
   border-radius: 2rem;
+}
+
+.price__item:first-of-type {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.price__item:first-of-type div:first-of-type {
+  display: flex;
+  align-items: center;
+}
+.price__item:first-of-type div:first-of-type span {
+  font-size: 4.8rem;
+  font-weight: 700;
+  margin-left: -8rem;
+}
+.price__item:first-of-type div:last-of-type {
+  margin-top: 1rem;
+  position: relative;
+}
+.price__item:first-of-type div:last-of-type span {
+  position: absolute;
+  top: 3rem;
+  font-size: 2.4rem;
 }
 
 .contacts a {
