--- a/scss/base/_extends.scss
+++ b/scss/base/_extends.scss
@@ -16,6 +16,13 @@
 	gap: 2rem;
 }
 
+%grid-3col {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 2rem;
+	width: 100%;
+}
+
 %section-line {
 	border-top: .2rem solid $clr-baseDark;
 
