--- a/scss/blocks/_price.scss
+++ b/scss/blocks/_price.scss
@@ -1,12 +1,13 @@
 .price {
 	&__grid {
-		@extend %grid-3col;
+		@extend %grid-2col;
 	}
 
 	&__item:first-of-type {
-		display: flex;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
 		align-items: center;
-		gap: 1rem;
+
 		div:first-of-type {
 			display: flex;
 			align-items: center;
@@ -26,6 +27,34 @@
 				top: 3rem;
 				font-size: 2.4rem;
 			}
+		}
+		a {
+			margin-top: 3rem;
+			text-decoration: underline;
+			text-underline-offset: 1rem;
+			color: $clr-secondary;
+			font-size: 1.8rem;
+		}
+	}
+
+	&__item:nth-child(2) {
+		div {
+			display: flex;
+			align-items: center;
+
+			span {
+				font-size: 4.8rem;
+				font-weight: 700;
+				@extend %text-gradientHorizont;
+				margin-left: -8rem;
+			}
+		}
+
+		p {
+			font-size: 2rem;
+			line-height: 180%;
+			margin-left: 15rem;
+			color: $clr-baseNormal;
 		}
 	}
 }
