--- a/scss/blocks/_price.scss
+++ b/scss/blocks/_price.scss
@@ -38,23 +38,41 @@
 	}
 
 	&__item:nth-child(2) {
-		div {
-			display: flex;
-			align-items: center;
+		display: flex;
+		align-items: start;
 
-			span {
-				font-size: 4.8rem;
-				font-weight: 700;
-				@extend %text-gradientHorizont;
-				margin-left: -8rem;
+		div:first-of-type {
+			div {
+				display: flex;
+				align-items: center;
+
+				span {
+					font-size: 4.8rem;
+					font-weight: 700;
+					@extend %text-gradientHorizont;
+					margin-left: -8rem;
+				}
+			}
+
+			p {
+				font-size: 2rem;
+				line-height: 170%;
+				margin-left: 15rem;
+				color: $clr-baseNormal;
 			}
 		}
 
-		p {
-			font-size: 2rem;
-			line-height: 180%;
-			margin-left: 15rem;
-			color: $clr-baseNormal;
+		.price__var {
+
+			position: relative;
+			display: flex;
+			margin-top: 7rem;
+			margin-left: 2rem;
+			span {
+				position: absolute;
+				top: 3rem;
+				font-size: 2.4rem;
+			}
 		}
 	}
 }
