--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -1,23 +1,19 @@
 .hero {
-	height: 100vh;
-	min-height: 60rem;
-	position: relative;
-
+	@extend %full-screen;
 	@extend %section-lineNone;
+	position: relative;
 }
 
 video {
 	object-fit: cover;
-  width: 100%;
-  height: 100%;
+	@extend %hundred-percent;
 }
 
 .hero__content {
 	@extend %flex-center;
+	@extend %hundred-percent;
 	z-index: 20;
 	position: absolute;
-	height: 100%;
-	width: 100%;
 	top: 0;
 	left: 0;
 	background: rgba(0,0,0,.3);
@@ -36,19 +32,4 @@ video {
 			transform: scale(1.1);
 		}
 	}
-}
-
-.progress__bottom {
-	display: grid;
-	width: 100%;
-	grid-template-columns: max-content max-content max-content;
-	margin-top: 8rem;
-	justify-content: space-between;
-}
-
-.progress__bottom__item {
-	display: grid;
-	grid-template-columns: max-content 1fr;
-	align-items: center;
-	gap: 1rem;
 }
