--- a/css/main.css
+++ b/css/main.css
@@ -82,18 +82,6 @@ textarea {
   font-family: inherit;
 }
 
-.about__text__item, .about__text__wrap {
-  display: flex;
-  flex-direction: column;
-}
-
-.hero__content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
 .price__grid {
   display: grid;
   grid-template-columns: max-content 1fr;
@@ -121,6 +109,26 @@ footer, .contacts, section {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+}
+
+.hero {
+  height: 100vh;
+  min-height: 60rem;
+}
+
+.progress__grid .progress__images, .hero__content, video {
+  width: 100%;
+  height: 100%;
+}
+
+.about__text__item, .about__text__wrap, .progress__grid .timeline__wrap, .progress__grid .progress__col, .hero__content {
+  display: flex;
+  flex-direction: column;
+}
+
+.hero__content {
+  align-items: center;
+  justify-content: center;
 }
 
 body {
@@ -227,22 +235,16 @@ nav {
   }
 }
 .hero {
-  height: 100vh;
-  min-height: 60rem;
   position: relative;
 }
 
 video {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
 }
 
 .hero__content {
   z-index: 20;
   position: absolute;
-  height: 100%;
-  width: 100%;
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.3);
@@ -260,21 +262,6 @@ video {
   transform: scale(1.1);
 }
 
-.progress__bottom {
-  display: grid;
-  width: 100%;
-  grid-template-columns: max-content max-content max-content;
-  margin-top: 8rem;
-  justify-content: space-between;
-}
-
-.progress__bottom__item {
-  display: grid;
-  grid-template-columns: max-content 1fr;
-  align-items: center;
-  gap: 1rem;
-}
-
 .progress__grid {
   width: 100%;
   display: grid;
@@ -282,8 +269,6 @@ video {
   gap: 8rem;
 }
 .progress__grid .progress__col {
-  display: flex;
-  flex-direction: column;
   gap: 1.5rem;
 }
 .progress__grid .progress__col--first {
@@ -305,24 +290,20 @@ video {
   font-weight: 400;
 }
 .progress__grid .progress__images {
-  width: 100%;
-  height: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
 }
-.progress__grid .progress__images .progress__images__inner {
+.progress__grid .progress__images__inner {
   max-height: 22rem;
 }
-.progress__grid .progress__images .progress__images__inner img {
+.progress__grid .progress__images__inner img {
   border-radius: 2rem;
   object-fit: cover;
   object-position: center;
   height: 100%;
 }
 .progress__grid .timeline__wrap {
-  display: flex;
-  flex-direction: column;
   align-items: center;
 }
 .progress__grid .timeline {
@@ -338,6 +319,20 @@ video {
   height: 35rem;
   object-fit: cover;
   object-position: center;
+}
+
+.progress__bottom {
+  display: grid;
+  width: 100%;
+  grid-template-columns: max-content max-content max-content;
+  margin-top: 8rem;
+  justify-content: space-between;
+}
+.progress__bottom__item {
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  align-items: center;
+  gap: 1rem;
 }
 
 .about__grid {
@@ -386,14 +381,12 @@ video {
   color: #a2a1a1;
   line-height: 150%;
 }
-
 .specialization__grid {
   display: grid;
   grid-template-columns: 1.5fr 1fr;
   gap: 5rem;
   height: 40rem;
 }
-
 .specialization__col:first-of-type {
   overflow: auto;
   padding-right: 2rem;
@@ -407,7 +400,6 @@ video {
   background-color: #a2a1a1;
   border-radius: 10rem;
 }
-
 .specialization__col:last-of-type b {
   font-size: 2.4rem;
 }
