--- a/scss/base/_extends.scss
+++ b/scss/base/_extends.scss
@@ -1,15 +1,3 @@
-%flex-standart {
-	display: flex;
-	flex-direction: column;
-}
-
-%flex-center {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-}
-
 %grid-2box {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
@@ -44,4 +32,28 @@
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	background-clip: text;
+}
+
+
+// --- New Build --- //
+
+%full-screen {
+	height: 100vh;
+	min-height: 60rem;
+}
+
+%hundred-percent {
+	width: 100%;
+  height: 100%;
+}
+
+%flex-standart {
+	display: flex;
+	flex-direction: column;
+}
+
+%flex-center {
+	@extend %flex-standart;
+	align-items: center;
+	justify-content: center;
 }
