--- a/scss/blocks/_progress.scss
+++ b/scss/blocks/_progress.scss
@@ -1,81 +1,92 @@
 .progress {
 	@extend %section-lineNone;
-}
 
-.progress__grid {
-	width: 100%;
-	display: grid;
-	grid-template-columns: 1fr max-content 1fr;
-	gap: 8rem;
-
-	.progress__col {
-		display: flex;
-		flex-direction: column;
-		gap: 1.5rem;
-
-		&--first {
-			align-items: end;
-		}
-
-		&--second {
-			align-items: start;
-		}
-	}
-
-	.year {
-		font-size: 4.8rem;
-		font-weight: 600;
-		line-height: 100%;
-		@extend %text-gradientHorizont;
-		margin-top: -.7rem;
-		width: fit-content;
-	}
-
-	.desc {
-		color: $clr-baseNormal;
-		font-size: 1.8rem;
-		font-weight: 400;
-	}
-
-	.progress__images {
+	&__grid {
 		width: 100%;
-		height: 100%;
 		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		gap: 1rem;
-
-		.progress__images__inner {
-			max-height: 22rem;
-
-			img {
-				border-radius: 2rem;
-				object-fit: cover;
-				object-position: center;
-				height: 100%;
+		grid-template-columns: 1fr max-content 1fr;
+		gap: 8rem;
+	
+		.progress__col {
+			@extend %flex-standart;
+			gap: 1.5rem;
+	
+			&--first {
+				align-items: end;
+			}
+	
+			&--second {
+				align-items: start;
 			}
 		}
-	}
 	
-	.timeline__wrap {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-	}
-
-	.timeline {
-		background-color: $clr-baseUltraDark;
-		width: .2rem;
-		height: 87rem;
-		position: absolute;
-		z-index: -1;
-	}
-
-	.large-img {
-		border-radius: 2rem;
-		width: 100%;
-		height: 35rem;
-		object-fit: cover;
-		object-position: center;
+		.year {
+			font-size: 4.8rem;
+			font-weight: 600;
+			line-height: 100%;
+			@extend %text-gradientHorizont;
+			margin-top: -.7rem;
+			width: fit-content;
+		}
+	
+		.desc {
+			color: $clr-baseNormal;
+			font-size: 1.8rem;
+			font-weight: 400;
+		}
+	
+		.progress__images {
+			@extend %hundred-percent;
+			display: grid;
+			grid-template-columns: repeat(3, 1fr);
+			gap: 1rem;
+	
+			&__inner {
+				max-height: 22rem;
+	
+				img {
+					border-radius: 2rem;
+					object-fit: cover;
+					object-position: center;
+					height: 100%;
+				}
+			}
+		}
+		
+		.timeline__wrap {
+			@extend %flex-standart;
+			align-items: center;
+		}
+	
+		.timeline {
+			background-color: $clr-baseUltraDark;
+			width: .2rem;
+			height: 87rem;
+			position: absolute;
+			z-index: -1;
+		}
+	
+		.large-img {
+			border-radius: 2rem;
+			width: 100%;
+			height: 35rem;
+			object-fit: cover;
+			object-position: center;
+		}
 	}
 }
 
+.progress__bottom {
+	display: grid;
+	width: 100%;
+	grid-template-columns: max-content max-content max-content;
+	margin-top: 8rem;
+	justify-content: space-between;
+
+	&__item {
+		display: grid;
+		grid-template-columns: max-content 1fr;
+		align-items: center;
+		gap: 1rem;
+	}
+}
