--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -9,7 +9,7 @@
 }
 
 .btn--primary {
-	border: solid .2rem white;
+	border: solid .2rem $clr-light;
 	padding: .8rem 1.3rem .9rem;
 	margin-left: auto;
 
