--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,11 @@ footer, .contacts, section {
   grid-template-columns: repeat(3, 1fr);
 }
 
+.price__item:first-of-type, .about__grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
 body {
   background-color: #0D0D0D;
   color: white;
@@ -341,8 +346,6 @@ video {
 }
 
 .about__grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   gap: 5rem;
   align-items: stretch;
 }
@@ -565,8 +568,6 @@ video {
 }
 
 .price__item:first-of-type {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   align-items: center;
 }
 .price__item:first-of-type div:first-of-type {
