--- a/scss/base/_extends.scss
+++ b/scss/base/_extends.scss
@@ -1,9 +1,3 @@
-%grid-2box {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	gap: 2rem;
-}
-
 %grid-2col {
 	display: grid;
 	grid-template-columns: max-content 1fr;
@@ -61,4 +55,9 @@
 %grid-3col {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
+}
+
+%grid-2 {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
 }
