--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -16,7 +16,7 @@ video {
 	position: absolute;
 	top: 0;
 	left: 0;
-	background: rgba(0,0,0,.3);
+	background: $clr-backgroundTransparent;
 	gap: 2rem;
 
 	p {
