--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,10 @@ footer, .contacts, section {
   background-clip: text;
 }
 
+.mission p, .btn, h2, h1 {
+  text-align: center;
+}
+
 body {
   background-color: #0D0D0D;
   color: white;
@@ -149,11 +153,9 @@ body {
 
 h1 {
   font-size: clamp(4.8rem, 4.8rem + (1vw - 0.32rem) * 3.4091, 9.6rem);
-  text-align: center;
 }
 
 h2 {
-  text-align: center;
   font-size: clamp(2.4rem, 2.4rem + (1vw - 0.32rem) * 1.7045, 4.8rem);
   font-weight: 700;
   margin-bottom: 4rem;
@@ -165,7 +167,6 @@ h3 {
 }
 
 .btn {
-  text-align: center;
   height: fit-content;
   width: fit-content;
   border-radius: 10rem;
@@ -366,7 +367,6 @@ video {
   margin-bottom: 3rem;
 }
 .mission p {
-  text-align: center;
   white-space: 50px;
   font-size: 2.4rem;
   width: 65ch;
