--- a/css/privacy.css
+++ b/css/privacy.css
@@ -90,6 +90,10 @@ textarea {
 footer, section {
   border-top: 0.2rem solid #252525;
 }
+h2, h1 {
+  text-align: center;
+}
+
 body {
   background-color: #0D0D0D;
   color: white;
@@ -106,11 +110,9 @@ body {
 
 h1 {
   font-size: clamp(4.8rem, 4.8rem + (1vw - 0.32rem) * 3.4091, 9.6rem);
-  text-align: center;
 }
 
 h2 {
-  text-align: center;
   font-size: clamp(2.4rem, 2.4rem + (1vw - 0.32rem) * 1.7045, 4.8rem);
   font-weight: 700;
   margin-bottom: 4rem;
